<resources>
    <string name="shortcut_app_drawer_short">App Drawer</string>
    <string name="shortcut_letters_short">Letters</string>
    <string name="shortcut_simple_tray_short">Simple Tray</string>
    <string name="shortcut_hub_short">Hub</string>
    <string name="shortcut_recents_short">Recents</string>
    <string name="shortcut_settings_short">inkOS Settings</string>
    <string name="shortcut_tab_apps">Apps</string>
    <string name="shortcut_tab_pinned">Pinned</string>
    <string name="cancel">Cancel</string>
    <string name="open">Open</string>
    <string name="browse">Browse</string>
    <string name="delete">Delete</string>
    <string name="hide">Hide</string>
    <string name="unhide">Unhide</string>
    <string name="show">Show</string>
    <string name="lock">Lock</string>
    <string name="unlock">Unlock</string>
    <string name="rename">Rename</string>
    <string name="info">Info</string>
    <string name="okay">Okay</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="reset">Reset</string>
    <string name="done">Done</string>
    <string name="search">Search</string>
    <string name="left">Left</string>
    <string name="center">Center</string>
    <string name="right">Right</string>
    <string name="top">Top</string>
    <string name="bottom">Bottom</string>
    <string name="off">Off</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="system_default">System</string>
    <string name="select_app">Select App</string>
    <string name="brightness">Brightness</string>
    <string name="customizations">Customizations</string>
    <string name="btn_save">Save</string>
    <string name="btn_ok">OK</string>
    <string name="btn_copy">Copy</string>
    <string name="select_all">Select All</string>
    <string name="deselect_all">Deselect All</string>
    <string name="btn_paste">Paste</string>
    <string name="btn_back">Back</string>
    <string name="btn_back_arrow">← Back</string>
    <string name="btn_back_upper">BACK</string>
    <string name="btn_skip">SKIP</string>
    <string name="btn_select">SELECT</string>
    <string name="btn_next">NEXT</string>
    <string name="btn_finish">FINISH</string>
    <string name="choose_app">CHOOSE APP</string>
    <string name="cd_charging">Charging</string>
    <string name="cd_notifications">Notifications</string>
    <string name="cd_previous_event">Previous event</string>
    <string name="cd_next_event">Next event</string>
    <string name="cd_left_shortcut">Left shortcut</string>
    <string name="cd_right_shortcut">Right shortcut</string>
    <string name="cd_edit_widget">Edit widget</string>
    <string name="cd_decrease">Decrease</string>
    <string name="cd_increase">Increase</string>
    <string name="cd_delete_font">Delete font</string>
    <string name="cd_font_license">Font License</string>
    <string name="cd_remove">Remove</string>
    <string name="cd_add">Add</string>
    <string name="cd_dismiss">Dismiss</string>
    <string name="tab_style">Style</string>
    <string name="tab_function">Function</string>
    <string name="tab_gestures">Gestures</string>
    <string name="tab_theme">Theme</string>
    <string name="tab_alignment">Alignment</string>
    <string name="tab_islands_corners">Islands/Corners</string>
    <string name="tab_icons">Icons</string>
    <string name="tab_notifications">Notifications</string>
    <string name="tab_search">Search</string>
    <string name="tab_filtering">Filtering</string>
    <string name="tab_fonts">Fonts</string>
    <string name="tab_custom">Custom</string>
    <string name="settings_name">Settings</string>
    <string name="settings_home_title">Home</string>
    <string name="settings_look_feel_title">Look &amp; Feel</string>
    <string name="settings_gestures_title">Gestures</string>
    <string name="settings_hidden_apps_title">Hidden Apps</string>
    <string name="settings_advanced_title">Advanced</string>
    <string name="settings_exit_inkos_title">Exit inkOS</string>
    <string name="fonts_settings_title">Typography</string>
    <string name="look_feel_settings_title">Look &amp; Feel</string>
    <string name="gestures_settings_title">Gestures</string>
    <string name="notification_section">Notifications</string>
    <string name="notification_home">Home Notifications</string>
    <string name="home_management">Home &amp; App Management</string>
    <string name="home_widgets">Home Widgets</string>
    <string name="top_widgets">Top Widgets</string>
    <string name="clock_section">Clock</string>
    <string name="date_row_section">Date Row</string>
    <string name="bottom_widgets">Bottom Widgets</string>
    <string name="layout_positioning">Layout &amp; Positioning</string>
    <string name="visibility_display">Visibility &amp; Display</string>
    <string name="element_colors">Colors</string>
    <string name="donate">Donate</string>
    <string name="community">Community</string>
    <string name="about">About</string>
    <string name="desc_about">Credits &amp; support</string>
    <string name="tooltip_pinch_settings">Pinch in empty areas to open Settings</string>
    <string name="extra_features">Extras</string>
    <string name="icons_buttons">Icons &amp; Buttons</string>
    <string name="text_islands_section">Text Islands</string>
    <string name="system_section">System</string>
    <string name="other_functions">Other Functions</string>
    <string name="edit_mode">Edit Mode</string>
    <string name="exit_edit_mode">Exit Edit Mode</string>
    <string name="home_apps">Home Apps</string>
    <string name="apps_on_home_screen">Number of Home Apps</string>
    <string name="pages_on_home_screen">Number of Pages</string>
    <string name="enable_home_pager">Enable Page Indicator</string>
    <string name="home_page_reset">Home Page Reset</string>
    <string name="lock_home_apps">Lock Home Apps</string>
    <string name="lock_settings">Lock Settings</string>
    <string name="longpress_app_info">Long Press for App Info</string>
    <string name="extend_home_apps_area">Extend Clickable Area</string>
    <string name="home_alignment">Home Alignment</string>
    <string name="home_apps_alignment">Home Apps Alignment</string>
    <string name="home_clock_alignment">Clock alignment</string>
    <string name="home_date_alignment">Date alignment</string>
    <string name="home_quote_alignment">Widget alignment</string>
    <string name="app_size_gap">App Size/Gap</string>
    <string name="nr_apps_pages">Nr of Apps/Pages</string>
    <string name="margin_offset">Margin/Offset</string>
    <string name="show_clock">Show Clock</string>
    <string name="clock_format">Clock Format</string>
    <string name="clock_style">Clock Style</string>
    <string name="show_am_pm">Show AM/PM</string>
    <string name="dual_clocks">Dual Clocks</string>
    <string name="second_clock_offset">Second clock offset</string>
    <string name="date_format">Date Format</string>
    <string name="show_date">Date</string>
    <string name="show_date_battery_combo">Date + Battery</string>
    <string name="show_battery">Show Battery</string>
    <string name="show_notification_count">Show Notification Count</string>
    <string name="bottom_widget">Bottom Widget</string>
    <string name="bottom_widget_disabled">Disabled</string>
    <string name="bottom_widget_quote">Quote</string>
    <string name="bottom_widget_events">Events</string>
    <string name="bottom_widget_android">Android Widget</string>
    <string name="bottom_widget_shortcuts">Shortcuts</string>
    <string name="bottom_widget_total_usage">Total Usage</string>
    <string name="bottom_widget_page_dots">Page Dots</string>
    <string name="show_quote">Show Quote</string>
    <string name="show_audio_widget">Show Audio Widget</string>
    <string name="show_android_widget">Show Android Widget</string>
    <string name="quote_text">Quote Text</string>
    <string name="shortcut_left_icon">Left Icon</string>
    <string name="shortcut_left_action">Left Action</string>
    <string name="shortcut_right_icon">Right Icon</string>
    <string name="shortcut_right_action">Right Action</string>
    <string name="hide_outline">Hide Outline</string>
    <string name="android_widget_height">Widget Height</string>
    <string name="android_widget_margin_start">Left Margin</string>
    <string name="android_widget_margin_end">Right Margin</string>
    <string name="android_widget_alignment">Widget Alignment</string>
    <string name="choose_android_widget">Choose Widget</string>
    <string name="remove_android_widget">Remove Widget</string>
    <string name="loading_widget">Loading widget…</string>
    <string name="events_grant_permission">Grant Permission</string>
    <string name="events_grant_permission_subtitle">In order to access calendar events</string>
    <string name="events_choose_calendar">Choose calendar</string>
    <string name="events_all_calendars">All calendars</string>
    <string name="events_no_calendar">No calendar selected</string>
    <string name="events_no_events">No upcoming events</string>
    <string name="events_filter">Filter</string>
    <string name="events_filter_24h">24 hours</string>
    <string name="events_filter_1week">1 week</string>
    <string name="events_filter_2weeks">2 weeks</string>
    <string name="events_filter_1month">1 month</string>
    <string name="show_notification_badge">Asterisk Notification</string>
    <string name="label_notifications">Label Notifications</string>
    <string name="badge_indicator">Badge Indicator</string>
    <string name="badge_character_limit">Character Limit</string>
    <string name="show_media_playing_indicator">Media Playing Asterisk</string>
    <string name="show_media_playing_name">Media Playing Name</string>
    <string name="show_sender_name">Sender Name</string>
    <string name="show_conversation_group_name">Group Name</string>
    <string name="show_message">Message</string>
    <string name="clear_conversation_on_app_open">Clear When App Opens</string>
    <string name="letters_window">Letters Window</string>
    <string name="letters_allowlist">Letters Allowlist</string>
    <string name="push_notifications">Enable Notifications</string>
    <string name="chat_notifications_section">Chat Notifications</string>
    <string name="home_notifications_allowlist">Home Noti. Allowlist</string>
    <string name="notification_permission_enabled">Notification access on</string>
    <string name="notifications_per_page">Notifications Per Page</string>
    <string name="enable_bottom_navigation">Enable Bottom Navigation</string>
    <string name="no_notifications">No notifications</string>
    <string name="letters_screen_title">Letters</string>
    <string name="simple_tray_title">Simple Tray</string>
    <string name="simple_tray_allowlist">Simple Tray Allowlist</string>
    <string name="simple_tray_apps">Simple Tray Apps</string>
    <string name="hub_allowlist">Hub Allowlist</string>
    <string name="hub_apps">Hub Apps</string>
    <string name="app_drawer">App Drawer</string>
    <string name="app_drawer_alignment">Alignment</string>
    <string name="az_filter">AZ Filter</string>
    <string name="filtering">Filtering</string>
    <string name="show_icons">Show Icons</string>
    <string name="sort_order">Sort Order</string>
    <string name="hide_home_apps">Hide Home Apps</string>
    <string name="search_hidden_apps">Search Hidden Apps</string>
    <string name="search_everything">Search everything</string>
    <string name="search_contacts">Search contacts</string>
    <string name="search_web">Search web</string>
    <string name="search_settings">Search settings</string>
    <string name="search_music">Search music</string>
    <string name="search_files">Search files</string>
    <string name="search_folders">Search Folders</string>
</resources>